public/sass/style.scss
/* ... */
.nav>li>a:hover, .nav>li>a:focus{
	background-color: $blue-header !important;
	text-decoration: underline;
}

@media (max-width: 767px) {
	.navbar {

		.navbar-toggle {
			background-color: #ccc;
			margin-top: 14px;
		}

		.navbar-nav {
			background-color: rgba(244,244,244,0.9);

			width: 100%;
			text-align: center;
			li a {
				font-size: 20px;
				font-weight: normal;
				padding: 10px;
				color: #666;

				&:hover, &:active {
					background-color: rgba(200, 200, 200, 0.9);
				}
			}
		}

		.navbar-brand.logo-madison {
			margin-left: 0;
		}
	}
}

/* Selected pieces of the navbar from bootstrap */

.navbar-toggle {
  border-color: #ddd;
}
.navbar-toggle:hover,
.navbar-toggle:focus {
  background-color: #ddd;
}
.navbar-toggle .icon-bar {
  background-color: #888;
}



/* NAVIGATION
------------------------------ */
.nav {

	// These are separated because they're global, and should be
	// applied to all navs. Avoids duplicate code.

	ul {
		margin: 6px 0 0;
		padding: 0;
		list-style: none;

	}

	li {
		margin: 0;
		padding: 0;

		a {
			padding: 15px 10px;
		}
	}
}

.nav .open>a, .nav .open>a:hover, .nav .open>a:focus {
		background: none;
		text-decoration: none;
	}

.nav-main {

	ul {
		float: right;
	}

	li {
		font-weight: bold;
		font-size: 12px;
		a{
			color: #FFF;
		}
		ul{
			background: #2673C4;
			border: none;
			padding-top: 5px;
			padding-bottom: 5px;
			li{
				margin-left: 0px;
				display: block;
				width: 100%;
				padding-left: 5px;
				padding-right: 5px;
				a{
					color: #e3f4ff;
					padding: 7px 9px;
					font-weight: bold;
					@include border-radius(3px);
					&:hover{
						background: $blue-header;
						color: #fff;
					}
				}
			}
		}
	}



	.dropdown-menu {
		margin-top: 5px;
		border-top-right-radius: 4px !important;
		border-top-left-radius: 4px !important;
	}
}

.nav-footer {

	padding-top: 30px;
	text-align: center;

	.container {
		width: 100%;
		margin: 0 auto;
		text-align: center;
	}

	a {
		display: inline-block;
		box-sizing: border-box;
		margin: 0 5px 0 0;
		padding: 0 10px 0 0;
		font-size: 12px;
		text-transform: uppercase;
		border-right: 1px solid #bcbab9;
	}

	a:last-child {
		margin-right: none;
		padding-right: none;
		border-right: none;
	}
}

/* GLOBAL SEARCH
------------------------------ */
.global-search {

	form {
		width: 100%;
		position: relative;
		top: 14px; /* TO-DO: Needs to be dynamic */
	}

	.input-search {
		margin: 0;
	}

	.input-submit {
		height: 24px;
		width: 24px;
		margin: -12px 0 0;
		border: 0;
		position: absolute;
		right: 5px;
		top: 50%;
		text-indent: -9999px;
		background: transparent url(../img/dark-blue-search.png) center no-repeat;
	}
}

/* CONTENT
------------------------------ */
#main{
	padding-right:0;
	padding-left:0;
	position:relative;
}


.navbar-default{
	.navbar-nav{
		li{
			a{
				&.black{
					color:black;

					&:hover{
						color:white;
					}
				}
			}
		}
	}
}

.content-container{
	// @include single-box-shadow(black, 1em, 1em, 1em, -1em);
	background:white;
	@include box-sizing(border-box);
	border: 1px solid #f0f0f0;
	@include border-radius(4px);
	padding: 10px 15px;

	a{
		color:$blue-grad-end;
	}
	ul{
		list-style:none;
	}
}

.content{
	@extend .content-container;
	padding: 30px;

}

.content.col-md-12 .row{
	h1{
		margin-bottom: 45px;
	}
	ul{
		list-style: none;
		margin-top: 40px;
		padding: 0px 0px;
		@include box-sizing(border-box);
		li{
			border-top: 1px solid #ccc;
			padding: 12px 10px;
			position: relative;
			@include box-sizing(border-box);
			a{
				font-weight: bold;
				font-size:1.2em;
				color: #444;
				line-height: 140%;
				&:hover{
					color: #111;
					text-decoration: underline;
				}
			}
			.list-doc-info{
				color: #999;
				font-size: .9em;
				margin-top: 4px;
				span{
					//border-right: 2px solid #cccccc;
					padding-right: 10px;
				}
				.doc-created-date{

				}
				.dov-updated-date{

				}
				.doc-action-count{
					background: #999;
					color: #FFF;
					text-align: center;
					font-weight: bold;
					@include border-radius(2px);
					position: absolute;
					right:0;
					top: 12px;
					display: block;
					padding: 3px 8px 4px 8px;
				}
			}
			.doc-categories{
				padding-right: 0px;
				margin-right: 0px;
				position: relative;
				top: -2px;
			}
			.category{
				background: #999;
				color: #FFF;
				@include border-radius(2px);
				text-align: center;
				font-weight: bold;
				padding: 3px 6px 4px 6px;
				font-size: .8em;
				margin-left: 4px;
				display:inline-block;
			}
			.doc-statuses{
				position: relative;
				top: -2px;
				.status{
					background: #489EF9;
					color: #FFF;
					@include border-radius(2px);
					text-align: center;
					font-weight: bold;
					padding: 3px 6px 4px 6px;
					font-size: .8em;
					margin-right: 4px;
					display:inline-block;
				}
			}


		}
	}
}

.home-select2-container{
	.select2-container{
		margin-top:10px;
		height:34px;

		.select2-choice{
			height:34px;
			line-height:33px;
		}
	}
}

.select2-container{
	width:100%;
	margin-top: 5px;
}

.user-info h1{
	margin-bottom: 5px !important;
}

.user-gravatar{
	display: inline-block;
	margin-right:10px;
	margin-left: 20px;
	float: left;
}

h1.user-name{
	text-align: left;
	margin-top: 0px;
	margin-bottom: 0px;
	display: inline-block;
}

.user-verified{
	background: #489EF9;
	color: #FFF;
	@include border-radius(2px);
	text-align: center;
	font-weight: bold;
	padding: 4px 5px 4px 5px;
	font-size: .8em;
	text-transform: uppercase;
	display: inline-block;
	position: relative;
	top: -6px;
	margin-left: 5px;
}

.user-created-date{
	color: #999;
	font-size: .9em;
	display: block;
	padding-left: 1px;
}
/* ... */

